--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "packageManager": "pnpm@10.7.0",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^5.1.0",
     "express-handlebars": "^8.0.3",
     "nodemon": "^3.1.10"
