--- a/public/data/projects.json
+++ b/public/data/projects.json
@@ -1,58 +1,92 @@
-{
-  "projects": [
-    {
-      "title": "project-1",
-      "subtitle": "Sprite Animations",
-      "description": "In this first project we leard to develop a visualizer to each of our sprite sheet's animation.",
-      "image": ""
-    },
-    {
-      "title": "project-2",
-      "subtitle": "Parallax Backgrounds",
-      "description": "With the parallax effect we can simulate 3d perspective, as the ground moves, each of the backgorund images moves, but each one has a different speed.",
-      "image": ""
-    },
-    {
-      "title": "project-3",
-      "subtitle": "NPC Movement Patterns",
-      "description": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus neciaculis mauris.",
-      "image": ""
-    },
-    {
-      "title": "project-1",
-      "subtitle": "Collision Animations",
-      "description": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus neciaculis mauris.",
-      "image": ""
-    },
-    {
-      "title": "project-1",
-      "subtitle": "Point and Shoot Game",
-      "description": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus neciaculis mauris.",
-      "image": ""
-    },
-    {
-      "title": "project-1",
-      "subtitle": "Enemy Variaty",
-      "description": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus neciaculis mauris.",
-      "image": ""
-    },
-    {
-      "title": "project-1",
-      "subtitle": "Side-scroller Game with Mobile Support",
-      "description": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus neciaculis mauris.",
-      "image": ""
-    },
-    {
-      "title": "project-1",
-      "subtitle": "State Management",
-      "description": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus neciaculis mauris.",
-      "image": ""
-    },
-    {
-      "title": "project-1",
-      "subtitle": "Final Endless Game with All The Features",
-      "description": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus neciaculis mauris.",
-      "image": ""
+[
+  {
+    "name": "project-1",
+    "title": "Project 1",
+    "subtitle": "Sprite Animations",
+    "description": "In this first project we leard to develop a visualizer to each of our sprite sheet's animation.",
+    "image": {
+      "src": "",
+      "alt": ""
     }
-  ]
-}
+  },
+  {
+    "name": "project-2",
+    "title": "Project 2",
+    "subtitle": "Parallax Backgrounds",
+    "description": "With the parallax effect we can simulate 3d perspective, as the ground moves, each of the backgorund images moves, but each one has a different speed.",
+    "image": {
+      "src": "",
+      "alt": ""
+    }
+  },
+  {
+    "name": "project-3",
+    "title": "Project 3",
+    "subtitle": "NPC Movement Patterns",
+    "description": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus neciaculis mauris.",
+    "image": {
+      "src": "",
+      "alt": ""
+    }
+  },
+  {
+    "name": "project-4",
+    "title": "Project 4",
+    "subtitle": "Collision Animations",
+    "description": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus neciaculis mauris.",
+    "image": {
+      "src": "",
+      "alt": ""
+    }
+  },
+  {
+    "name": "project-5",
+    "title": "Project 5",
+    "subtitle": "Point and Shoot Game",
+    "description": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus neciaculis mauris.",
+    "image": {
+      "src": "",
+      "alt": ""
+    }
+  },
+  {
+    "name": "project-6",
+    "title": "Project 6",
+    "subtitle": "Enemy Variaty",
+    "description": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus neciaculis mauris.",
+    "image": {
+      "src": "",
+      "alt": ""
+    }
+  },
+  {
+    "name": "project-7",
+    "title": "Project 7",
+    "subtitle": "Side-scroller Game with Mobile Support",
+    "description": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus neciaculis mauris.",
+    "image": {
+      "src": "",
+      "alt": ""
+    }
+  },
+  {
+    "name": "project-8",
+    "title": "Project 8",
+    "subtitle": "State Management",
+    "description": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus neciaculis mauris.",
+    "image": {
+      "src": "",
+      "alt": ""
+    }
+  },
+  {
+    "name": "project-9",
+    "title": "Project 9",
+    "subtitle": "Final Endless Game with All The Features",
+    "description": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus neciaculis mauris.",
+    "image": {
+      "src": "",
+      "alt": ""
+    }
+  }
+]
